test_next-20160225/20160224214534/build/defconfig/build_20160224214534_log.txt
test_build: Wed Feb 24 21:47:21 PST 2016: started on defconfig test_next-20160225 (6cbc4fe7dd12f3e761add7d3626fa9b920d7c89f)
test_build: Wed Feb 24 21:47:21 PST 2016: serial is 20160224214534
arch/arm64/mm/hugetlbpage.c: In function ‘huge_pte_alloc’:
arch/arm64/mm/hugetlbpage.c:127:42: error: macro "pte_alloc_map" passed 4 arguments, but takes just 3
   pte = pte_alloc_map(mm, NULL, pmd, addr);
                                          ^
arch/arm64/mm/hugetlbpage.c:127:9: error: ‘pte_alloc_map’ undeclared (first use in this function)
   pte = pte_alloc_map(mm, NULL, pmd, addr);
         ^
arch/arm64/mm/hugetlbpage.c:127:9: note: each undeclared identifier is reported only once for each function it appears in
arch/arm64/mm/hugetlbpage.c:117:10: warning: unused variable ‘pmd’ [-Wunused-variable]
   pmd_t *pmd = pmd_alloc(mm, pud, addr);
          ^
make[1]: *** [arch/arm64/mm/hugetlbpage.o] Error 1
make[1]: *** Waiting for unfinished jobs....
make: *** [arch/arm64/mm] Error 2
make: *** Waiting for unfinished jobs....
test_build: Wed Feb 24 21:47:33 PST 2016: FAILED on defconfig test_next-20160225
test_build: Wed Feb 24 21:47:33 PST 2016: ended on defconfig test_next-20160225
